--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,19 @@
           align-items: center;
 }
 
+.presentation {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media only screen and (max-width: 768px) {
+  .presentation {
+    background-attachment: unset;
+  }
+}
+
 .presentation .titlePres {
   color: white;
   position: relative;
@@ -80,8 +93,13 @@
           justify-content: center;
   text-align: center;
   margin-top: 5rem;
-  margin-right: 2rem;
-  margin-left: 2rem;
+}
+
+.section1 #article1 {
+  padding-bottom: 40px;
+  padding-left: 15px;
+  padding-right: 15px;
+  max-width: 1100px;
 }
 
 .section1 .title1 {
@@ -109,7 +127,6 @@
 
 .section2 {
   background-image: url(../assets/tamil.jpg);
-  height: 30rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -133,7 +150,9 @@
           flex-direction: column;
   text-align: center;
   margin-top: 3rem;
-  height: 22rem;
+  padding-bottom: 40px;
+  padding-left: 15px;
+  padding-right: 15px;
   background-color: #F6F8FA;
 }
 
@@ -166,7 +185,6 @@
 
 .section3 {
   background-image: url(../assets/contentcreator.jpg);
-  height: 30rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -178,6 +196,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 5rem;
+  padding-bottom: 20px;
 }
 
 .section3 .article3 {
@@ -190,7 +209,9 @@
           flex-direction: column;
   text-align: center;
   margin-top: 3rem;
-  height: 22rem;
+  padding-bottom: 40px;
+  padding-left: 15px;
+  padding-right: 15px;
   background-color: #F6F8FA;
 }
 
@@ -207,9 +228,9 @@
 .section3 .article3 .text3 {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
-  margin-left: 1.5rem;
+  padding-left: 30px;
+  padding-right: 30px;
   margin-top: 3rem;
-  margin-right: 1.5rem;
 }
 
 .section3 .imgDiv {
@@ -243,6 +264,9 @@
           flex-direction: column;
   text-align: center;
   width: 50%;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 40px;
 }
 
 .sectionMiddle .articleMiddle1 .titleMiddle {
@@ -273,6 +297,8 @@
           flex-direction: column;
   text-align: center;
   width: 50%;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .sectionMiddle .articleMiddle2 .titleMiddle {
@@ -356,7 +382,6 @@
 
 .section4 {
   background-image: url(../assets/miamibeach.jpg);
-  height: 30rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -380,7 +405,9 @@
           flex-direction: column;
   text-align: center;
   margin-top: 3rem;
-  height: 22rem;
+  padding-bottom: 40px;
+  padding-left: 15px;
+  padding-right: 15px;
   background-color: #F6F8FA;
 }
 
@@ -400,6 +427,7 @@
   margin-left: 1.5rem;
   margin-top: 3rem;
   margin-right: 1.5rem;
+  padding-bottom: 30px;
 }
 
 .section4 .imgDiv {
@@ -515,8 +543,8 @@
 }
 
 /*Mobile Styles */
-@media only screen and (max-width: 400px) {
-  .headerStyle {
+@media only screen and (max-width: 800px) {
+  .headerStyle .navStyle {
     width: 100%;
   }
   .headerStyle .navStyle .aStyle {
