--- a/css/style.scss
+++ b/css/style.scss
@@ -36,7 +36,16 @@ $important: #ddb75e;
     display: flex;
    flex-direction: column;
     align-items: center;
+    &{
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     
+        @media only screen and (max-width: 768px) {
+            background-attachment:unset;
+        }
+    }
     .titlePres{
         color: white;
         position: relative;
@@ -71,11 +80,14 @@ $important: #ddb75e;
     justify-content: center;
     text-align: center;
     margin-top: 5rem;
-    margin-right: 2rem;
-    margin-left: 2rem;
+   
       
-        
-           
+        #article1{
+            padding-bottom: 40px;
+            padding-left: 15px;
+            padding-right: 15px;
+           max-width: 1100px;
+        }
    
     
         .title1{
@@ -106,7 +118,7 @@ $important: #ddb75e;
 
 .section2{
     background-image: url(../assets/tamil.jpg);
-    height: 30rem;
+    
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -117,7 +129,9 @@ $important: #ddb75e;
         flex-direction: column;
         text-align: center;
         margin-top: 3rem;   
-        height: 22rem;  
+        padding-bottom: 40px;
+        padding-left: 15px;
+        padding-right: 15px;
        
         background-color: $bgcolor;
         
@@ -156,19 +170,20 @@ $important: #ddb75e;
 
 .section3{
     background-image: url(../assets/contentcreator.jpg);
-    height: 30rem;
+    
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     margin-top: 5rem;
-    
+    padding-bottom: 20px;
     .article3{
         display: flex;
         flex-direction: column;
         text-align: center;
         margin-top: 3rem;   
-        height: 22rem;  
-       
+        padding-bottom: 40px;
+        padding-left: 15px;
+        padding-right: 15px;
         background-color: $bgcolor;
         
 
@@ -185,10 +200,11 @@ $important: #ddb75e;
         .text3{
             color: $blue;
             font-family: $textfont;
-            margin-left: 1.5rem;
+            
+            padding-left: 30px;
+            padding-right: 30px;
             margin-top: 3rem; 
-            margin-right: 1.5rem;
-
+            
         }
     }
 
@@ -215,7 +231,9 @@ $important: #ddb75e;
         flex-direction: column;
         text-align: center;
         width: 50%;
-
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 40px;
         .titleMiddle{
             color: $blue;
             font-family: $titlefont;
@@ -242,7 +260,8 @@ $important: #ddb75e;
         flex-direction: column;
         text-align: center;
         width: 50%;
-
+        padding-left: 50px;
+        padding-right: 50px;
         .titleMiddle{
             color: $blue;
             font-family: $titlefont;
@@ -328,7 +347,7 @@ $important: #ddb75e;
 }
 .section4{
     background-image: url(../assets/miamibeach.jpg);
-    height: 30rem;
+    
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -339,7 +358,9 @@ $important: #ddb75e;
         flex-direction: column;
         text-align: center;
         margin-top: 3rem;   
-        height: 22rem;  
+        padding-bottom: 40px;
+        padding-left: 15px;
+        padding-right: 15px;
        
         background-color: $bgcolor;
         
@@ -360,7 +381,7 @@ $important: #ddb75e;
             margin-left: 1.5rem;
             margin-top: 3rem; 
             margin-right: 1.5rem;
-
+            padding-bottom: 30px;
         }
     }
 
@@ -473,13 +494,13 @@ $important: #ddb75e;
 }
 
 /*Mobile Styles */
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 800px) {
     
     .headerStyle{
-       width: 100%;
+       
         
       .navStyle{
-              
+        width: 100%;
           .aStyle{
               font-size: 55%;
               
