--- a/css/style.css
+++ b/css/style.css
@@ -111,12 +111,13 @@
 .section1 .subtitle1 {
   color: #0D234B;
   font-family: "Playfair Display", serif;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .section1 .text1 {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
+  font-weight: 500;
 }
 
 .section1 .importantText {
@@ -159,7 +160,7 @@
 .section2 .article2 .title2 {
   color: #0D234B;
   font-family: "Playfair Display", serif;
-  margin-top: 3rem;
+  padding-top: 50px;
 }
 
 .section2 .article2 .title2 .importantText {
@@ -172,6 +173,8 @@
   margin-left: 1.5rem;
   margin-top: 3rem;
   margin-right: 1.5rem;
+  font-weight: 500;
+  font-size: 20px;
 }
 
 .section2 .imgDiv {
@@ -228,6 +231,7 @@
 .section3 .article3 .text3 {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
+  font-size: 20px;
   padding-left: 30px;
   padding-right: 30px;
   margin-top: 3rem;
@@ -285,6 +289,7 @@
   margin-left: 1.5rem;
   margin-top: 3rem;
   margin-right: 1.5rem;
+  font-size: 20px;
 }
 
 .sectionMiddle .articleMiddle2 {
@@ -317,6 +322,7 @@
   margin-left: 1.5rem;
   margin-top: 3rem;
   margin-right: 1.5rem;
+  font-size: 20px;
 }
 
 .sectionMiddle .articleMiddle2 .importantText2 {
@@ -414,7 +420,7 @@
 .section4 .article4 .title4 {
   color: #0D234B;
   font-family: "Playfair Display", serif;
-  margin-top: 3rem;
+  padding-top: 5rem;
 }
 
 .section4 .article4 .title4 .importantText {
@@ -428,6 +434,7 @@
   margin-top: 3rem;
   margin-right: 1.5rem;
   padding-bottom: 30px;
+  font-size: 20px;
 }
 
 .section4 .imgDiv {
@@ -468,7 +475,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #F6F8FA;
-  width: 95%;
+  width: 85%;
   margin-top: 2rem;
   margin-bottom: 2rem;
   -webkit-box-shadow: 0px 0px 33px -11px #0d234b;
@@ -477,6 +484,8 @@
   -moz-border-radius: 10px 10px 10px 10px;
   -webkit-border-radius: 10px 10px 10px 10px;
   border: 0px solid #000000;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .section5 .article5 .title5 {
@@ -492,6 +501,7 @@
   font-family: "Open Sans Condensed", sans-serif;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+  font-size: 20px;
 }
 
 .footer {
