--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+.fadeinleft {
+  opacity: 0;
+  transform: translateX(-100px);
+  animation: fade-in-left-animation 1s forwards;
+}
+@keyframes fade-in-left-animation {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .body {
   background-color: #F6F8FA;
 }
@@ -7,18 +23,13 @@
   width: 100%;
   z-index: 2;
 }
-
 .headerStyle .navStyle {
   background-color: #0D234B;
   margin: 0 auto;
   padding: 1rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 .headerStyle .navStyle .aStyle {
   text-decoration: none;
   color: #FBF4E4;
@@ -30,31 +41,21 @@
   width: 100%;
   background-image: url(../assets/casa.jfif);
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
-
 .presentation {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 @media only screen and (max-width: 768px) {
   .presentation {
     background-attachment: unset;
   }
 }
-
 .presentation .titlePres {
   color: white;
   position: relative;
@@ -64,7 +65,6 @@
   font-size: 4rem;
   margin-top: 8rem;
 }
-
 .presentation .titlePres2 {
   color: white;
   position: relative;
@@ -75,7 +75,7 @@
 }
 
 .presentation::after {
-  content: '';
+  content: "";
   background-color: rgba(90, 90, 88, 0.7);
   position: absolute;
   top: 0;
@@ -85,41 +85,33 @@
 }
 
 .section1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   text-align: center;
   margin-top: 5rem;
 }
-
 .section1 #article1 {
   padding-bottom: 40px;
   padding-left: 15px;
   padding-right: 15px;
   max-width: 1100px;
 }
-
-.section1 .title1 {
+.section1 #article1 .titulo1 {
+  color: #0D234B;
+  font-family: "Playfair Display", serif;
+  margin-bottom: 2rem;
+  font-weight: 400;
+}
+.section1 #article1 .subtitle1 {
   color: #0D234B;
   font-family: "Playfair Display", serif;
   margin-bottom: 2rem;
 }
-
-.section1 .subtitle1 {
-  color: #0D234B;
-  font-family: "Playfair Display", serif;
-  margin-bottom: 2rem;
-}
-
 .section1 .text1 {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
   font-weight: 500;
 }
-
 .section1 .importantText {
   font-size: 1.5rem;
   color: #ddb75e;
@@ -128,45 +120,40 @@
 
 .section2 {
   background-image: url(../assets/tamil.jpg);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 5rem;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
-
+.section2 {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media only screen and (max-width: 768px) {
+  .section2 {
+    background-attachment: unset;
+  }
+}
 .section2 .article2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: center;
-  margin-top: 3rem;
+  height: 22rem;
   padding-bottom: 40px;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin: auto;
   background-color: #F6F8FA;
 }
-
 .section2 .article2 .title2 {
   color: #0D234B;
   font-family: "Playfair Display", serif;
   padding-top: 50px;
 }
-
 .section2 .article2 .title2 .importantText {
   color: #ddb75e;
 }
-
 .section2 .article2 .text2 {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
@@ -176,11 +163,9 @@
   font-weight: 500;
   font-size: 20px;
 }
-
 .section2 .imgDiv {
   margin-top: 3rem;
 }
-
 .section2 .imgDiv .img2 {
   width: 50rem;
   height: 22rem;
@@ -188,46 +173,43 @@
 
 .section3 {
   background-image: url(../assets/contentcreator.jpg);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  padding-top: 3rem;
   margin-top: 5rem;
-  padding-bottom: 20px;
+  padding-bottom: 4rem;
 }
-
+.section3 {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media only screen and (max-width: 768px) {
+  .section3 {
+    background-attachment: unset;
+  }
+}
 .section3 .article3 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: center;
-  margin-top: 3rem;
+  padding-top: 3rem;
+  height: 22rem;
   padding-bottom: 40px;
   padding-left: 15px;
   padding-right: 15px;
   background-color: #F6F8FA;
 }
-
 .section3 .article3 .title3 {
   color: #0D234B;
   font-family: "Playfair Display", serif;
   margin-top: 3rem;
 }
-
 .section3 .article3 .title3 .importantText {
   color: #ddb75e;
 }
-
 .section3 .article3 .text3 {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
@@ -235,54 +217,39 @@
   padding-left: 30px;
   padding-right: 30px;
   margin-top: 3rem;
+  font-weight: 500;
 }
-
 .section3 .imgDiv {
   margin-top: 3rem;
 }
-
 .section3 .imgDiv .img3 {
   width: 30rem;
   height: 22rem;
 }
 
 .sectionMiddle {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
   background-color: #ECF0F3;
   margin-top: 5rem;
 }
-
 .sectionMiddle .articleMiddle1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: center;
   width: 50%;
   padding-left: 50px;
   padding-right: 50px;
   padding-bottom: 40px;
 }
-
 .sectionMiddle .articleMiddle1 .titleMiddle {
   color: #0D234B;
   font-family: "Playfair Display", serif;
   margin-top: 3rem;
 }
-
 .sectionMiddle .articleMiddle1 .titleMiddle .importantText {
   color: #ddb75e;
 }
-
 .sectionMiddle .articleMiddle1 .textMiddle {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
@@ -291,31 +258,22 @@
   margin-right: 1.5rem;
   font-size: 20px;
 }
-
 .sectionMiddle .articleMiddle2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: center;
   width: 50%;
   padding-left: 50px;
   padding-right: 50px;
 }
-
 .sectionMiddle .articleMiddle2 .titleMiddle {
   color: #0D234B;
   font-family: "Playfair Display", serif;
   margin-top: 3rem;
 }
-
 .sectionMiddle .articleMiddle2 .titleMiddle .importantText {
   color: #ddb75e;
 }
-
 .sectionMiddle .articleMiddle2 .textMiddle {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
@@ -324,10 +282,9 @@
   margin-right: 1.5rem;
   font-size: 20px;
 }
-
 .sectionMiddle .articleMiddle2 .importantText2 {
   color: #0D234B;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   margin-left: 1.5rem;
   margin-top: 0.5rem;
   margin-right: 1.5rem;
@@ -336,50 +293,33 @@
 
 .sectionForm {
   margin-top: 5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   background-color: #ECF0F3;
 }
-
 .sectionForm .articleForm {
   width: 60%;
   margin-top: 3.5rem;
   margin-bottom: 3.5rem;
 }
-
 .sectionForm .articleForm .mb-3 {
   width: 100%;
   text-align: center;
 }
-
 .sectionForm .articleForm .mb-3 .form-label {
   font-family: "Playfair Display", serif;
   color: #0D234B;
   font-size: 1.5rem;
 }
-
 .sectionForm .articleForm .mb-3 .form-control {
   background-color: #ECF0F3;
-  -webkit-box-shadow: 0px 0px 33px -16px #0d234b;
-  box-shadow: 0px 0px 33px -16px #0d234b;
+  box-shadow: 0px 0px 33px -16px rgb(13, 35, 75);
 }
-
 .sectionForm .articleForm .btnClass {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .sectionForm .articleForm .btnClass .btn {
   background-color: #ddb75e;
   color: #F6F8FA;
@@ -388,27 +328,26 @@
 
 .section4 {
   background-image: url(../assets/miamibeach.jpg);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-between;
   margin-top: 5rem;
+  padding-bottom: 3.5rem;
 }
-
+.section4 {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media only screen and (max-width: 768px) {
+  .section4 {
+    background-attachment: unset;
+  }
+}
 .section4 .article4 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   text-align: center;
   margin-top: 3rem;
   padding-bottom: 40px;
@@ -416,17 +355,14 @@
   padding-right: 15px;
   background-color: #F6F8FA;
 }
-
 .section4 .article4 .title4 {
   color: #0D234B;
   font-family: "Playfair Display", serif;
   padding-top: 5rem;
 }
-
 .section4 .article4 .title4 .importantText {
   color: #ddb75e;
 }
-
 .section4 .article4 .text4 {
   color: #0D234B;
   font-family: "Open Sans Condensed", sans-serif;
@@ -436,11 +372,9 @@
   padding-bottom: 30px;
   font-size: 20px;
 }
-
 .section4 .imgDiv {
   margin-top: 3rem;
 }
-
 .section4 .imgDiv .img4 {
   width: 40rem;
   height: 22rem;
@@ -450,36 +384,24 @@
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
-
 .carousel .carousel-inner {
   height: 30rem;
 }
 
 .section5 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   text-align: center;
   margin-top: 5rem;
 }
-
 .section5 .article5 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   background-color: #F6F8FA;
   width: 85%;
   margin-top: 2rem;
   margin-bottom: 2rem;
-  -webkit-box-shadow: 0px 0px 33px -11px #0d234b;
-  box-shadow: 0px 0px 33px -11px #0d234b;
+  box-shadow: 0px 0px 33px -11px rgb(13, 35, 75);
   border-radius: 10px 10px 10px 10px;
   -moz-border-radius: 10px 10px 10px 10px;
   -webkit-border-radius: 10px 10px 10px 10px;
@@ -487,14 +409,12 @@
   padding-top: 50px;
   padding-bottom: 50px;
 }
-
 .section5 .article5 .title5 {
   text-align: center;
   color: #0D234B;
   font-family: "Playfair Display", serif;
   margin-bottom: 2rem;
 }
-
 .section5 .article5 .text5 {
   text-align: center;
   color: #0D234B;
@@ -509,34 +429,20 @@
   height: 17rem;
   margin-top: 10rem;
 }
-
 .footer .contactFooter {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 .footer .contactFooter .contactoLink {
   color: #0D234B;
   margin-top: 4rem;
 }
-
 .footer .footerTitleContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   text-align: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
 .footer .footerTitleContainer .footerTitle {
   font-family: "Playfair Display", serif;
   color: #0D234B;
@@ -544,7 +450,6 @@
   font-size: 2rem;
   text-decoration: none;
 }
-
 .footer .footerTitleContainer .footerText {
   font-family: "Open Sans Condensed", sans-serif;
   color: #0D234B;
@@ -582,13 +487,8 @@
   }
   .section2 {
     margin-top: 4rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .section2 .article2 {
     margin-bottom: 0.8rem;
@@ -617,13 +517,8 @@
     height: 75%;
   }
   .section3 {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     margin-top: 1rem;
   }
   .section3 .article3 {
@@ -684,13 +579,8 @@
   .section4 {
     margin-top: 1rem;
     margin-bottom: 2rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .section4 .article4 {
     margin-top: 1.5rem;
@@ -747,5 +637,4 @@
   .footer .footerTitleContainer .footerText {
     font-size: 0.8rem;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
